--- a/css/menu.css
+++ b/css/menu.css
@@ -27,8 +27,7 @@ nav a.actief{
     border-right: .7em solid white;
 }
 #menu-schuiver:checked ~ nav{
-    transition: left .5s ease-in-out;
-    left: 100vw;
+    right: 100vw;
 }
 #menu-schuiver{
     display: none;
